# miniftp

./: README.md
client/: CMakeLists.txt  main.c
client/include/: config.h  file.h  network.h  shell.h
client/src/file/: file.c
client/src/network/: network.c
client/src/shell/: CMakeLists.txt  shell.c  shell_funsions.c
server/: CMakeLists.txt  main.c
server/include/: config.h  file.h  network.h  shell.h  work.h
server/src/file/: CMakeLists.txt
server/src/network/: CMakeLists.txt  network.c
server/src/shell/: CMakeLists.txt  shell.c
server/src/work/: CMakeLists.txt  work.c
